--- a/index3.html
+++ b/index3.html
@@ -329,7 +329,7 @@ Awalnya, Tomcat merupakan proyek Apache yang menjadi bagian dari Apache Server. 
             <p>GitLab adalah sebuah manajer repositori Git berbasis web dengan fitur wiki dan pelacakan masalah, menggunakan lisensi sumber terbuka, dikembangkan oleh GitLab Inc. Perangkat lunak ini ditulis oleh Dmitriy Zaporozhets dan Valery Sizov dari Ukraina. Kode yang ditulis adalah Ruby.</p>
 
             <img src="bitbucket.png" height="100px" width="100px" alt=""><h5 class="mt-0">BitBucket</h5>
-            <p>Bitbucket adalah sebuah layanan hosting yang berbasis web untuk kode sumber dan pembangunan proyek yang menggunakan Mercurial ataupun sistem kendali versi Git yang dimiliki oleh Atlassian. Bitbucket menawarkan paket akun komersial dan gratis.</p>
+            <p>Bitbucket adalah sebuah layanan hosting yang berbasis web untuk kode sumber dan pembangunan proyek yang menggunakan Mercurial ataupun sistem kendali versi Git yang dimiliki oleh Atlassian. Bitbucket menawarkan paket akun komersial dan gratis</p>
 
             
             
